--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^1.0.3
   video_player: ^2.5.0
+  http: ^0.13.6
 
 
   # The following adds the Cupertino Icons font to your application.
