--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  model_viewer_plus: ^1.9.2
   flutter_svg: ^1.0.3
   video_player: ^2.5.0
   http: ^0.13.6
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -66,6 +68,7 @@ flutter:
     - assets/images/
     - assets/videos/
     - assets/fonts/
+    - assets/models/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
