--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   model_viewer_plus: ^1.9.2
+  # flutter_unity_widget: ^2022.2.0
   flutter_svg: ^1.0.3
   video_player: ^2.5.0
   http: ^0.13.6
